--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
-title: PPL Article
-description: PPL Article by Abi Fajri
+title: Abby's PPL Journal
+description: All written here is about my PPL journey - filled with fun and all-new experience (not really, duh).
